update gen-api workflow
